--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-header{
+/* header{
   height: 100vh;
   width: auto;
 }
@@ -11,7 +11,9 @@ main{
 footer{
   height: 100vh;
   width: auto;
-}
+} */
+
+
 
 
 .header-row{
