--- a/style.css
+++ b/style.css
@@ -61,6 +61,15 @@ body, html {
   transform: translateY(-77%) translateX(-22%);
 }
 
+.move-that-down{
+  transform: translateY(33%);
+}
+
+.bg-middle{
+  background-image: url('https://wallpapercave.com/wp/wp2801544.jpg');
+  background-size: cover;
+}
+
 @supports (display: flex) {
   @media screen and (max-width: 300px) {
     #input-card {
@@ -72,17 +81,28 @@ body, html {
 
 @supports (display: flex) {
   @media screen and (max-width: 800px) {
-    #text-right {
+    #text-right, #card2 {
     display: none;
     }
   }
 }
 
 @supports (display: flex) {
-  @media screen and (max-width:400px) {
+  @media screen and (max-width:800px) {
     #card3 {
       width: 90%;
       transform: translateY(-77%) translateX(5%);
     }
   }
 }
+
+@supports (display: flex) {
+  @media screen and (max-width:800px) {
+    #card1 {
+      width: 90%;
+      transform: translateY(110%) translateX(5%);
+    }
+  }
+}
+
+
