--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ body, html {
 }
 
 .glow-button:hover {
-  filter: drop-shadow(3px 3px 3px rgb(255, 0, 212)) saturate(90%);
-  color: rgb(255, 0, 212);
-  transition: 100ms ease-out;
+  filter: drop-shadow(3px 0px 3px rgb(212, 95, 207));
+  color: rgb(255, 45, 238)!important;
+  transition: color 200ms ease-in;
 }
 
 .review-cards{
@@ -78,7 +78,7 @@ body, html {
 }
 
 .move-that-ish{
-  transform: translateY(-50%) translateX(10%);
+  transform: translateY(-50%) translateX(22%);
   max-height: 66vh;
 }
 
@@ -86,28 +86,45 @@ body, html {
   transform: translateY(-11%) translateX(39%);
 }
 
+.move-it-boi1{
+  transform: translateX(0%) translateY(88%);
+  height: 33vh;
+}
+
+.move-it-boi2{
+  transform: translateX(0%) translateY(88%);
+  height: 33vh;
+  position: sticky;
+}
+
+.font-killer{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 
 
 
 @supports (display: flex) {
-  @media screen and (max-width: 300px) {
-    #input-card {
-      display: flex;
-      width: 90%;
+  @media screen and (max-width: 900px) {
+    #text-right {
+    display: none;
     }
   }
 }
 
+
+
+
 @supports (display: flex) {
-  @media screen and (max-width: 800px) {
-    #text-right, #card2, #go-away {
+  @media screen and (max-width: 1200px) {
+    #card2, #go-away {
     display: none;
     }
   }
 }
 
 @supports (display: flex) {
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 850px) {
     #go-away {
       transform: translateY(50%);
     }
@@ -115,7 +132,7 @@ body, html {
 }
 
 @supports (display: flex) {
-  @media screen and (max-width:800px) {
+  @media screen and (max-width:900px) {
     #card3 {
       width: 90%;
       height: 48vh;
@@ -125,7 +142,7 @@ body, html {
 }
 
 @supports (display: flex) {
-  @media screen and (max-width:800px) {
+  @media screen and (max-width:900px) {
     #card1 {
       width: 90%;
       height: 25vh;
@@ -136,7 +153,7 @@ body, html {
 
 
 @supports (display: flex) {
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 850px) {
     #go-away3 {
       display: none;
     }
@@ -144,7 +161,7 @@ body, html {
 }
 
 @supports (display: flex) {
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 850px) {
     #go-away4 {
       display: none;
     }
@@ -160,7 +177,7 @@ body, html {
 }
 
 @supports (display: flex) {
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 850px) {
     #text-clapper2 {
       transform: translateY(-30%);
     }
@@ -170,8 +187,9 @@ body, html {
 @supports (display: flex) {
   @media screen and (max-width: 1100px) {
     #card-mover {
-      width: 100vw;
-      transform: translateY(0%) translateX(0%) ;
+      width:88.5vw;
+      height: 100vh;
+      transform: translateY(0%) translateX(6%) ;
     }
   }
 }
@@ -180,12 +198,136 @@ body, html {
   @media screen and (max-width: 900px) {
     #img-mover {
       display: flex;
-      max-width: 45vw;
-      max-height: 45vh;
-      transform: translateY(40%) translateX(10%) ;
+      max-width: 50vw;
+      max-height: 50vh;
+      transform: translateY(50%) translateX(-70%) ;
     }
   }
 }
+
+@supports (display: flex) {
+  @media screen and (max-width: 900px) {
+    #img-mover {
+      display: flex;
+      max-width: 55vw;
+      max-height: 55vh;
+      transform: translateY(50%) translateX(-70%) ;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-height: 700px) {
+    #img-mover {
+      display: flex;
+      max-width: 55vw;
+      max-height: 55vh;
+      transform: translateY(50%) translateX(-30%) ;
+    }
+  }
+}
+
+
+@supports (display: flex) {
+  @media screen and (max-width: 900px) {
+    #first-to-last {
+      display: flex;
+      max-height: 15vh;
+      transform: translateY(500%) translateX(0) ;
+    }
+  }
+}
+
+
+@supports (display: flex) {
+  @media screen and (max-width: 900px) {
+    #second-2-last {
+      display: flex;
+      max-height: 18vh;
+      transform: translateY(333%) translateX(0) ;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-width: 820px) {
+    #second-2-last {
+      display: flex;
+      transform: translateY(420%) translateX(0) ;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-width: 1300px) {
+    #review-card-left {
+      display: none;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-width: 1100px) {
+    #review-card-center {
+      transform: translateY(222%) translateX(0) ;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-width: 500px) {
+    #review-card-center {
+      transform: translateY(255%) translateX(0) ;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-height: 700px) {
+    #review-card-center {
+      transform: translateY(210%) translateX(0) ;
+    }
+  }
+}
+
+
+@supports (display: flex) {
+  @media screen and (max-width: 1300px) {
+    #review-card-right {
+      display:none ;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-width: 920px) {
+    .footer-row {
+      display:flex;
+      flex-direction: column;
+      height: 100vh ;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-height: 700px) {
+    .bye-bye {
+      display: none;
+    }
+  }
+}
+
+@supports (display: flex) {
+  @media screen and (max-width: 800px) {
+    #text-remover {
+      display: none;
+    }
+  }
+}
+
+
+
+
 
 
 
