--- a/style.css
+++ b/style.css
@@ -40,19 +40,24 @@ body, html {
 i {
   filter: drop-shadow(3px 0px 3px rgb(212, 95, 207));
   color: rgb(253, 142, 244)!important;
-  transition: color 100ms ease-in;
+  transition: color 100ms ease-in-out;
 }
 
 i:hover {
   filter: drop-shadow(3px 0px 3px rgb(255, 255, 255));
   color: rgb(255, 255, 255)!important;
-  transition: color 100ms ease-in;
+  transition: color 333ms ease-in-out;
 }
 
-h1:hover, h2:hover, h3:hover, h4:hover, h5:hover, p:hover, .btn:hover, img:hover, .card:hover {
-  filter: drop-shadow(3px 0px 3px rgb(214, 44, 205));
-  color: rgb(253, 142, 244)!important;
+h1:hover, h2:hover, h3:hover, h4:hover, h5:hover, p:hover, .btn:hover, .card:hover {
+  filter: drop-shadow(3px 0px 3px rgb(255, 74, 246));
+  color: rgb(255, 204, 252)!important;
   transition: color 777ms ease-in-out;
+}
+
+.card, img{
+  filter: drop-shadow(3px 0px 3px rgba(214, 44, 205, 0.315));
+  color: rgb(254, 238, 255)!important;
 }
 
 
